tests/negative/gold/no-lambda-consumer-test.gold
tests/negative/no-lambda-consumer-test.toit:11:10: error: Empty lambdas are not allowed
      run::
         ^~
tests/negative/no-lambda-consumer-test.toit:10:3: error: Missing colon for 'if' condition
  if
  ^~
tests/negative/no-lambda-consumer-test.toit:14:3: error: Argument mismatch for 'run'
Too many arguments provided
  run
  ^~~
tests/negative/no-lambda-consumer-test.toit:11:7: error: Condition can't be 'none'
      run::
      ^~~
tests/negative/no-lambda-consumer-test.toit:19:7: error: Condition can't be 'none'
      run:
      ^~~
Compilation failed
